Issue #477 - Moving invalid-element on radios and checkboxes so it does not cause last item to shift.

--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -252,4 +252,18 @@ form {
       border-color: var(--bs-form-invalid-border-color);
     }
   }
+
+  &.was-validated {
+    .form-radios,
+    .form-checkboxes {
+      .invalid-feedback {
+        display: none;
+      }
+
+      &:has(:invalid) .invalid-feedback {
+        display: block;
+      }
+    }
+  }
+
 }
